# opta

./: .env.example  .gitignore  .mcp.json  .stignore  .vercelignore  APPS-INDEX.md  CHANGELOG.md  CLAUDE.md  DESIGN_SYSTEM.md  FOLDER_REORGANIZATION_EXECUTION_PLAN.md  FOLDER_STRUCTURE_DIAGRAM.md  FOLDER_STRUCTURE_VISUAL.md  INDEX.md  MIGRATION-FROM-DOCUMENTS.md  README.md  Stop Opta.command  gu-devquiz-ceo-capabilities.html  gu-energy-equator.html  gu-openclaw-intention.html  gu-opta-apps-overview.html  gu-opta-cli-hardening-handoff.html  gu-opta-cli-vs-code-feature-map.html  gu-opta-code-masterclass.html  gu-opta-code-studio-system.html  gu-opta-code-universal-compatibility.html  gu-opta-codebase-state.html  gu-opta-ecosystem-identity.html  gu-opta-folder-structure.html  gu-opta-help-aesthetic.html  gu-opta-init-windows.html  gu-opta-mini-features.html  gu-opta-reorg-optalocal-state.html  gu-opta-roadmap-openclaw.html  gu-opta-studio-design-library.html  gu-opta-three-systems.html  gu-power-stone-ring.html  gu-ring-evolution.html  justfile  package-lock.json  package.json  (+4 more)
1-Apps/1J-Opta-LMX/: .gitignore  ANALYSIS-REPORT.md  APP.md  CLAUDE.md  pyproject.toml  run.py
1-Apps/1J-Opta-LMX/.planning/: ROADMAP.md  STATE.md
1-Apps/1J-Opta-LMX/config/: default-config.yaml  mono512-current.yaml  production-config.yaml
1-Apps/1J-Opta-LMX/docs/: ECOSYSTEM.md  GUARDRAILS.md  OPTA-CLI-MIGRATION.md  PROJECT-DEFINITION.md  ROADMAP.md
1-Apps/1J-Opta-LMX/docs/context/: CONVERSATION-CONTEXT.md
1-Apps/1J-Opta-LMX/docs/launchd/: com.opta.lmx.plist
1-Apps/1J-Opta-LMX/docs/plans/: 2026-02-15-phase-6-features-design.md  2026-02-17-model-stack-design.md  2026-02-17-performance-optimization-design.md  2026-02-17-webui-dashboard-idea.md  2026-02-18-vllm-mlx-upgrade-plan.md  2026-02-19-phase10-production-plan.md  2026-02-19-phase9-rag-plan.md  API-SPEC.md  MASTER-PLAN.md  TECH-DECISIONS.md
1-Apps/1J-Opta-LMX/docs/research/: 2026-02-19-phase-9-advanced-rag-context.md  apple-silicon-optimization.md  mlx-capabilities.md  openai-api-spec.md
1-Apps/1J-Opta-LMX/presets/: code-assistant.yaml  glm-4-flash.yaml  glm-4.yaml  kimi-k2.yaml  minimax-m2.yaml  reasoning.yaml
1-Apps/1J-Opta-LMX/src/opta_lmx/: __init__.py  config.py  main.py  runtime_state.py
1-Apps/1J-Opta-LMX/tasks/: 2026-02-17-minimax-xml-tool-parser.md
1-Apps/1J-Opta-LMX/tests/: conftest.py  test_admin.py  test_anthropic.py  test_api.py  test_auto_download.py  test_bm25.py  test_chunker.py  test_circuit_breaker.py  test_concurrency.py  test_config.py  test_context.py  test_embeddings.py  test_events.py  test_gguf.py  test_health.py  test_health_check_loop.py  test_helper_nodes.py  test_logging.py  test_memory.py  test_metal_cache.py  test_metrics.py  test_middleware.py  test_model_manager.py  test_performance_profiles.py  test_predictor.py  test_presets.py  test_processors.py  test_quantize.py  test_rag.py  test_remote_helpers.py  test_rerank.py  test_router.py  test_runtime_state.py  test_session_store.py  test_sessions_api.py  test_sse_integration.py  test_stack_presets.py  test_streaming.py  test_structured.py  test_tool_parser.py  (+2 more)
1-Apps/optalocal/1M-Opta-LMX/: .gitignore  .luarc.json  APP.md  CLAUDE.md  CURRENT-STATE.md  GEMINI.md  MARKETING.md  README.md  pyproject.toml  requirements-ci-lock.txt  requirements-ci.in  requirements-dev.txt  run.py
1-Apps/optalocal/1M-Opta-LMX/.planning/: ROADMAP.md  STATE.md
1-Apps/optalocal/1M-Opta-LMX/12-Session-Logs/: 2026-02-23-142854-mono512-lan-events.jsonl  2026-02-23-1435-opta48-lan-runtime-session.md  2026-02-23-1439-mono512-lan-runtime-session.md  2026-02-23-1510-opta48-lan-runtime-session.md  2026-02-23-1518-opta48-lan-runtime-session.md  2026-02-23-1530-mono512-lan-runtime-session.md  2026-02-23-153015-mono512-lan-events.jsonl  2026-02-23-1600-mono512-lan-runtime-session.md  2026-02-23-160024-mono512-lan-events.jsonl  2026-02-23-160151-mono512-lan-events.jsonl  2026-02-23-161808-mono512-lan-events.jsonl  2026-02-23-161929-mono512-lan-events.jsonl  2026-02-23-162101-mono512-lan-events.jsonl  2026-02-23-1643-opta48-lan-runtime-session.md  2026-02-23-214340-mono512-lan-events.jsonl  2026-02-23-2146-opta48-lan-runtime-session.md  2026-02-23-2321-opta48-lan-runtime-session.md  2026-02-24-0318-opta48-lan-runtime-session.md  2026-02-24-0324-mono512-lan-runtime-session.md  2026-02-24-032430-mono512-lan-events.jsonl  2026-02-24-040002-mono512-lan-events.jsonl  2026-02-24-040702-mono512-lan-events.jsonl  2026-02-24-040915-mono512-lan-events.jsonl  2026-02-24-081900-mono512-lan-events.jsonl  2026-02-24-0836-opta48-lan-runtime-session.md  2026-02-24-0920-opta48-lan-runtime-session.md  2026-02-24-093331-mono512-lan-events.jsonl  2026-02-24-094049-mono512-lan-events.jsonl  2026-02-24-094312-mono512-lan-events.jsonl  2026-02-24-1051-opta48-lan-runtime-session.md  2026-02-24-1055-mono512-lan-runtime-session.md  2026-02-24-105525-mono512-lan-events.jsonl  2026-02-24-1105-opta48-lan-runtime-session.md  2026-02-24-1200-opta48-lan-runtime-session.md  2026-02-24-1356-opta48-lan-runtime-session.md  (+40 more)
mcp-server/: README.md  pyproject.toml
mcp-server/src/opta_mcp/: badges.py  conflicts.py  forecasting.py  llm.py  patterns.py  processes.py  profile.py  server.py  telemetry.py
opta-native/: Cargo.toml
opta-native/OptaApp/OptaApp/: Info.plist  OptaAppApp.swift
opta-native/OptaApp/OptaApp.xcodeproj/: project.pbxproj
opta-native/OptaApp/scripts/: build-macos.sh
opta-native/opta-core/: Cargo.toml
opta-native/opta-core/src/: app.rs  lib.rs  model.rs  opta.udl  view_model.rs
opta-native/opta-render/shaders/: bloom_threshold.wgsl  branch_border.wgsl  branch_indicator.wgsl  circular_menu.wgsl  glass_panel.wgsl  glass_panel_hd.wgsl  ring.wgsl  sdf_demo.wgsl
opta-native/opta-render/src/: ffi.rs  ffi_panels.rs  lib.rs  pipeline.rs  quality.rs
opta-native/opta-render/tests/: ring_test.rs
opta-native/opta-shared/: Cargo.toml
opta-native/opta-shared/src/: game.rs  process.rs
opta-native/scripts/: build-xcframework.sh  generate-swift-bindings.sh  notarize.sh
(+9843 files in other folders)
