[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opta-mcp-server"
version = "0.1.0"
description = "MCP server for Opta hardware telemetry"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Opta Team" }
]
dependencies = [
    "mcp>=1.0.0",
    "psutil>=5.9.0",
    "ollama>=0.3.0",
]

[project.optional-dependencies]
gpu = [
    "GPUtil>=1.4.0",
]

[project.scripts]
opta-mcp = "opta_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/opta_mcp"]
