[workspace]
resolver = "2"
members = [
    "opta-core",
    "opta-shared",
    # Future crates (Phase 60+):
    # "opta-render",  # wgpu rendering (Phase 60)
    # "opta-ui",      # UI components (Phase 63)
]

[workspace.package]
version = "8.0.0-alpha"
edition = "2021"
authors = ["Matthew Byrden <matt@opta.app>"]
license = "MIT"

[workspace.dependencies]
# Crux - Elm Architecture for Rust
crux_core = "0.8"
crux_http = "0.9"

# UniFFI - FFI bindings for Swift/Kotlin
uniffi = { version = "0.28", features = ["cli", "tokio"] }

# wgpu - GPU abstraction
wgpu = { version = "0.20", default-features = false }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.36", features = ["rt-multi-thread", "sync", "time", "macros"] }

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Math
glam = { version = "0.27", features = ["serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.7", features = ["v4", "serde"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
