[package]
name = "opta-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Opta core business logic using Crux architecture"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]
name = "opta_core"

[features]
default = ["macos"]
macos = []
typegen = ["crux_core/typegen"]

[dependencies]
# Workspace dependencies
opta-shared = { path = "../opta-shared" }
crux_core.workspace = true
crux_http.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
rusqlite.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
uuid.workspace = true

# UniFFI for shell bindings
uniffi.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
# macOS-specific dependencies for IOKit/SMC access
core-foundation = "0.9"
core-foundation-sys = "0.8"
io-kit-sys = "0.4"
mach2 = "0.4"
libc = "0.2"

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
