[package]
name = "opta-render"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "GPU rendering for Opta using wgpu with Metal backend optimization"

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
wgpu = { workspace = true }
raw-window-handle = { workspace = true }
pollster = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
bytemuck = { workspace = true }

# File watching for shader hot-reload (optional)
notify = { version = "7.0", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSAutoreleasePool"] }

[target.'cfg(target_os = "ios")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSAutoreleasePool"] }

[features]
default = []
# Enable 120Hz ProMotion support
promotion = []
# Enable compute shader support with Apple Silicon limits
compute = []
# Enable shader hot-reload for development
shader-hot-reload = ["notify"]
