[package]
name = "opta"
version = "6.0.0"
description = "Opta - AI PC Optimizer: One tool to replace them all"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "opta_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-os = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# High-performance IPC (Phase 20-10: State Sync)
# Note: "process" feature added for subprocess timeout support
tokio = { version = "1", features = ["sync", "time", "rt-multi-thread", "net", "process"] }
once_cell = "1.19"

[profile.release]
lto = true
opt-level = "s"
codegen-units = 1
strip = true
panic = "abort"

# Apple Silicon (aarch64-apple-darwin) specific optimizations
[profile.release.build-override]
opt-level = 3

# Target-specific configuration for Apple Silicon
# Note: rustflags moved to .cargo/config.toml for cleaner configuration

