[package]
name = "opta-init-desktop-manager"
version = "0.7.1"
description = "Opta Init Desktop Manager"
authors = ["Opta"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "~2.5.5", features = [] }

[dependencies]
tauri = { version = "~2.10.2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "io-util", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
webbrowser = "1"
dirs = "5"
semver = "1"
tauri-plugin-updater = "~2.10.0"
tauri-plugin-deep-link = "2"
